--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/frontend/focus.png" />
+    <link rel="icon" type="image/svg" href="/Meditation-bro.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Focus Hub</title>
   </head>
